--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
   <meta charset="UTF-8">
   <!-- CSSファイルの読み込み -->
   <link rel="stylesheet" href="style.css">
-  <title>sample</title>
+  <title>７章演習</title>
 </head>
 <body>
+	<header>
+		<p>リスト1</p>
+		<p>リスト2</p>
+		<p>リスト3</p>
+		<p>リスト4</p>
+		<p>リスト5</p>
+		<p>リスト6</p>
+		<p>リスト7</p>
+	</header>
+	<main class="clearfix">
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+	</main>
 </body>
 </html>
